--- a/notebooks/PCA.ipynb
+++ b/notebooks/PCA.ipynb
@@ -325,7 +325,7 @@
     "is distributed with the R language package and it can be downloaded from \n",
     "[here](https://vincentarelbundock.github.io/Rdatasets/csv/datasets/USArrests.csv).  For each state it gives the rates of murder, rape and assault, as well as the percentage of population that lives in urban areas.  Note this is from 1975 so don't draw any real conclusions from it!\n",
     "\n",
-    "This analysis follows section 10.2.1 of [Introduction to Statistical Learning with R](http://faculty.marshall.usc.edu/gareth-james/ISL/) by James, et. al. \n",
+    "This analysis follows section 10.2.1 of [Introduction to Statistical Learning with R](http://faculty.marshall.usc.edu/gareth-james/ISL/) by James, et. al, called ISLR below.\n",
     "\n",
     "First we load in the data."
    ]
@@ -501,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the diagram above, we see that the red arrow points in the direction in which the original \"UrbanPop\" is projected.  So moving DOWN in the graph corresponds to increasing percentage of urban population.  Rural states like Mississippi, Vermont, and West Virginia are up above;\n",
+    "In the diagram above (which mimics Figure 10.1 in ISLR), we see that the red arrow points in the direction in which the original \"UrbanPop\" is projected.  So moving DOWN in the graph corresponds to increasing percentage of urban population.  Rural states like Mississippi, Vermont, and West Virginia are up above;\n",
     "Urban states like California, New Jersey, Massachusetts are down below. \n",
     "\n",
     "The three crime arrows point to the left, with slighly different orientations.  This tells us that moving to the left gives generally higher crime rates, though the different crimes interact differently with population. \n",
