stashing a draft of convolution ipynb

--- a/notebooks/Convolution.ipynb
+++ b/notebooks/Convolution.ipynb
@@ -420,7 +420,7 @@
     "of these as functions on the positive integers we see that the $k^{th}$ coefficient of $fg$ is $(a * b)(k)$.  Also notice\n",
     "this requires $O(d^2)$ multiplications.\n",
     "\n",
-    "Let's think of $a$, $b$, and $c$ as functions  $\\mathbf{Z}/\\mathbf{2dZ}\\to \\mathbf{C}$.\n",
+    "Let's think of $a$, $b$, and $c$ as functions  $\\mathbf{Z}/(2d\\mathbf{Z})\\to \\mathbf{C}$.\n",
     "\n",
     "We can:\n",
     "- compute the Fourier Transforms $\\hat{a}$ and $\\hat{b}$ of the functions $a$ and $b$.  \n",
@@ -459,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
