--- a/notebooks/Convolution.ipynb
+++ b/notebooks/Convolution.ipynb
@@ -480,7 +480,7 @@
     "#### Fourier Series\n",
     "\n",
     "A function $f(z)$ in $L^{2}(S^{1})$ has a Fourier Series \n",
-    "$\\sum_{n=0}^{\\infty} a_{n}e^{2\\pi i nz}$ \n",
+    "$\\sum_{n=-\\infty}^{\\infty} a_{n}e^{2\\pi i nz}$ \n",
     "where \n",
     "\n",
     "$$\n",
